# Pos-2022

./: CMakeLists.txt
Cvičenie t10/: cvicenie T10 - 1.cpp
Cvičenie t12/: Klient.cpp  Server.cpp
Cvičenie t12/Sokety - asynchrónna komunikácia/: k_a_t_server.cpp
Cvičenie t12/Sokety - synchrónna komunikácia/: README.txt  k_s_client.cpp  k_s_server.cpp
Cvičenie t7/: array_list.c  array_list.h  date.c  date.h  main.c
Cvičenie t8/: Uloha 1.c  Uloha 2.cpp  Uloha 3.cpp
Cvičenie t9/: cvicenie T9 - 01.cpp  cvicenie T9 - 02.cpp
DomacaUloha/: Mitala  Tobiáš_Mitala_5ZYI33
DomacaUloha2/: DomacaUloha2.cpp
Pisomka/: Pis1  Pis2  Pis3  Pis4  Pr04
Pisomka2/: Tobias_Mitala_5ZYI33.cpp
Precvicovanie/: Pr01.sh  Pr02  Pr03  Pr04  Pr05  Pr06  Pr07  Pr08  Pr09  Pr10  Pr11  Pr12  Pr13  Pr14  Pr15  Pr16  Pr17  Pr18  Pr19  Pr20  Pr21  Pr22  Pr23  Pr24  Pr40
Precvicovanie2/: Pr01_Prvocisla.cpp  Pr02_KombinacneCisla.cpp  Pr25_SusenieHub.cpp  Pr_vlastne.cpp
